add tests for (<exp>); remove Java deprecations